syntax = "proto3";

package Serializer;


message Edge {
    uint32 from = 1;
    uint32 to = 2;
    double weight = 3;
}

message IncidenceList {
    repeated uint32 incidence_list = 1;
}

message Graph {
    repeated Edge edges = 1;
    repeated IncidenceList incidence_lists = 2;
}

message NavigationSettings {
    uint32 bus_wait_time = 1;
    double bus_velocity = 2;
}

message EdgeInfo {
    string bus = 1;
    uint32 span_count = 2;
};

message VertexIds {
    repeated uint32 vertex_ids = 1;
}

message EdgeToVertexIds {
    repeated VertexIds id_to_vertex_ids = 1;
}

message NavigationDataBase {
    NavigationSettings settings = 1;
    map<string, uint32> stop_name_to_vertex_id = 2;
    repeated string vertex_id_to_stop_name = 3;
    repeated EdgeInfo edge_id_to_edge_info = 4;
    Graph roads_graph = 5;
    EdgeToVertexIds edge_id_to_vertex_ids = 6;
}